--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ Saved/
 
 # Compiled source files for the engine to use
 Intermediate/
-
+Debug/
 # Cache files for the editor to use
 DerivedDataCache/
 
