--- a/ThreadExample/Config/DefaultEngine.ini
+++ b/ThreadExample/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Untitled.Untitled
+EditorStartupMap=/Game/Untitled.Untitled
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -14,4 +14,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ThreadExample")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ThreadExample")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ThreadExampleGameModeBase")
+
+[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
+IconModelPath=(Path="")
+IconPortalPath=(Path="")
 
