--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ spatial/schema
 spatial/snapshots
 Game/Content/Spatial/SchemaDatabase.uasset
 
+# Rider
+/.idea
+/ThreadExample/Plugins/Developer/RiderLink/
