--- a/ThreadExample/Config/DefaultEngine.ini
+++ b/ThreadExample/Config/DefaultEngine.ini
@@ -19,3 +19,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ThreadExample.BusStructMessage.HelloText",NewName="/Script/ThreadExample.BusStructMessage.HelloTextNAme")
++PropertyRedirects=(OldName="/Script/ThreadExample.BusStructMessage.HelloTextNAme",NewName="/Script/ThreadExample.BusStructMessage.TextNAme")
++PropertyRedirects=(OldName="/Script/ThreadExample.BusStructMessage.TextNAme",NewName="/Script/ThreadExample.BusStructMessage.TextName")
